--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -79,6 +79,7 @@
     font-size: 1rem;
     padding: 0.5rem 1rem;
     color: #000;
+    font-weight: 600;
     text-decoration: none;
     transition: background-color 0.3s ease;
     border-radius: 35px;
